# semiosis

./: .editorconfig  .gitignore  .pre-commit-config.yaml  AGENTS.md  ANALYSIS_SUMMARY.txt  ARCHITECTURE.md  CLAUDE.md  CONTRIBUTING.md  HIERARCHICAL_STRUCTURES_ANALYSIS.md  IMPLEMENTATION_EXAMPLES.md  IMPLEMENTATION_ROADMAP.md  LEARNING_ADAPTATION_EXTRACTION.md  LEARNING_LOOP_ANALYSIS.md  LEARNING_LOOP_HYPOTHESES.md  LEARNING_LOOP_README.md  LICENSE  Makefile  README.md  SKILLS.md  pyproject.toml
.github/workflows/: ci.yml
.gm/: mutables.yml  next-step.md  nla-analysis-checklist.md  nla-attention-summary.txt  prd.yml  rlm-agent-rows.yml
.gm/disciplines/codeinsight/: __digest__.json  ci-10f21a87-0.json  ci-10f21a87-2.json  (+593 more)
.gm/disciplines/codeinsight-manifest/: AGENTS.md.json  ARCHITECTURE.md.json  CLAUDE.md.json  HIERARCHICAL_STRUCTURES_ANALYSIS.md.json  IMPLEMENTATION_EXAMPLES.md.json  IMPLEMENTATION_ROADMAP.md.json  LEARNING_ADAPTATION_EXTRACTION.md.json  LEARNING_LOOP_ANALYSIS.md.json  LEARNING_LOOP_HYPOTHESES.md.json  LEARNING_LOOP_README.md.json  README.md.json  SKILLS.md.json  core___init__.py.json  core_activation_predictor.py.json  core_agent_api.py.json  core_api.py.json  core_cone_engine.py.json  core_conftest.py.json  core_context_pack.py.json  core_dag.py.json  core_encoder.py.json  core_eval.py.json  core_interfaces.py.json  core_kb_activation.py.json  core_kb_diagnostics.py.json  core_kb_geometry.py.json  core_kb_hierarchy.py.json  core_kb_persistence.py.json  core_kb_retrieval.py.json  core_kb_types.py.json  core_lexical_index.py.json  core_locality_index.py.json  core_manifold_ops.py.json  core_markdown_store.py.json  core_pipeline.py.json  core_recursive.py.json  core_research_loop.py.json  core_semiotic_memory.py.json  core_serialization.py.json  core_settings.py.json  (+33 more)
.gm/disciplines/codeinsight-vec/: ci-10f21a87-0.json  ci-10f21a87-2.json  ci-125f0d8e-2.json  ci-125f0d8e-7.json  ci-145e2689-0.json  ci-145e2689-19.json  ci-145e2689-3.json  ci-145e2689-8.json  ci-1643dd96-2.json  ci-1aa4f937-0.json  ci-1aa4f937-1.json  ci-1cb85ca2-0.json  ci-1cb85ca2-6.json  ci-1cb85ca2-8.json  ci-22e7fc9d-0.json  ci-2400ba9a-5f3078f2-0.json  ci-25e38aa5-0.json  ci-25e38aa5-2.json  ci-25e38aa5-3.json  ci-25e38aa5-7.json  ci-26475ed8-0.json  ci-2738781f-11.json  ci-2738781f-12.json  ci-2738781f-13.json  ci-2738781f-2.json  ci-2738781f-6.json  ci-2738781f-8.json  ci-2738781f-9.json  ci-2b93ca7c-1c3f638c-3.json  ci-2b93ca7c-3cbbd4ae-0.json  ci-2b93ca7c-3cbbd4ae-3.json  ci-2b93ca7c-3cbbd4ae-5.json  ci-2cb72126-0.json  ci-2cb72126-1.json  ci-2cb72126-10.json  ci-2cb72126-11.json  ci-2cb72126-12.json  ci-2cb72126-13.json  ci-2cb72126-14.json  ci-2cb72126-15.json  (+469 more)
.gm/instructions/: browser.md  consolidate.md  emit.md  entry.md  execute.md  plan.md  update_docs.md  verify.md
.gm/memories/: .flat-export-done  mem-05d344da4e9837d2-1458.md  mem-156bda825ce8fe1d-224.md  mem-16e1676cdd59e430-379.md  mem-1c0c4833f3332b0c-233.md  mem-2a8c979823b61051-281.md  mem-4b708d1fbb90e034-294.md  mem-6642fc27c1421208-1925.md  mem-6f4737d17f52e86c-363.md  mem-6fa7eccbc2b5e290-315.md  mem-8cbd9ff076e202fa-794.md  mem-90e29c10c5f525bf-319.md  mem-94e6fe41a73c47f2-1636.md  mem-95c841700fc9edb4-1151.md  mem-95d74a34c41edbbc-1048.md  mem-9b24e4ed79b581ce-1017.md  mem-9f8cd2ba736e39e2-167.md  mem-a0f2588104269470-1571.md  mem-ab8ee3fde188d9bc-539.md  mem-acd0bb60e5765d1f-1075.md  mem-c07d94a869d5bddc-1465.md  mem-c1f5493dbd4fe972-899.md  mem-c9acdabf080ccaea-1393.md  mem-cd3dfc3976ec1a62-297.md  mem-e98265acc054e38a-1167.md  mem-ea5c448f2ac50897-1757.md  mem-ed8bd454472f8672-1040.md  mem-eff1e3c3445a25e6-345.md  mem-f13580e479293b6c-212.md  mem-f78a0189af107c55-379.md  mem-fc196cc4c8fa5a76-914.md
core/: __init__.py  activation_predictor.py  agent_api.py  api.py  cone_engine.py  conftest.py  context_pack.py  dag.py  encoder.py  eval.py  interfaces.py  kb_activation.py  kb_diagnostics.py  kb_geometry.py  kb_hierarchy.py  kb_persistence.py  kb_retrieval.py  kb_types.py  lexical_index.py  locality_index.py  manifold_ops.py  markdown_store.py  pipeline.py  recursive.py  research_loop.py  semiotic_memory.py  serialization.py  settings.py  store.py  summarizer.py  test_agent_surface.py  test_context_pack.py  test_dag.py  test_encoder.py  test_eval.py  test_manifold_invariants.py  test_memory.py  test_persist.py  test_pipeline.py  test_recursive.py  (+4 more)
docs/: README-nla-analysis.md  adversarial-pattern-recognition-guide.md  adversarial-prd-rows.md  adversarial-robustness-strategy.md  agent-guide.md  agent-intuition-guide.md  auto-research.md  nla-attention-action-plan.md  nla-attention-hypothesis.md  paper-insights-summary.md  phase2-entropy-implementation.md  phase2-infrastructure.md  rlm-agent-reasoning-extraction.md  session-3-agent-intuition-summary.md  streaming-extraction-summary.md  streaming-realtime-concepts.md
skills/research-loop-skill/: SKILL.md
skills/semiosis-skill/: SKILL.md
(+102 files in other folders)
