[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["core*"]

[tool.setuptools.package-data]
core = ["py.typed"]

[project]
name = "semantic-cones"
version = "0.1.0"
description = "Hyperbolic entailment-cone semantic structure over Matryoshka octaves"
requires-python = ">=3.11"
dependencies = [
  "numpy>=1.26",
  "pydantic>=2.6",
  "pydantic-settings>=2.2",
]

[project.optional-dependencies]
hyperbolic = ["torch>=2.2", "geoopt>=0.5"]
encoder = ["sentence-transformers>=2.7", "scipy>=1.12"]
serving = ["fastapi>=0.110", "uvicorn>=0.29"]
dev = ["mypy>=1.9", "pytest>=8.1", "hypothesis>=6.100", "ruff>=0.3"]
all = ["semantic-cones[hyperbolic,encoder,serving]"]

[tool.mypy]
# not yet strict-clean (no CI gate has run against this codebase); tighten incrementally
# rather than claim strict=true without an enforcing gate.
warn_unreachable = true

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "W", "F", "I", "UP", "B"]
ignore = []

[tool.pytest.ini_options]
testpaths = ["core"]
